--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "@redwoodjs/web": "^0.39.4",
     "prop-types": "15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   }
 }
