--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-scrollama": "^2.2.16",
     "styled-components": "^5.3.3"
   }
 }
