--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@redwoodjs/api": "^0.39.4",
-    "@redwoodjs/graphql-server": "^0.39.4"
+    "@redwoodjs/graphql-server": "^0.39.4",
+    "crypto-js": "^4.1.1"
   }
 }
