--- a/web/package.json
+++ b/web/package.json
@@ -13,9 +13,11 @@
     ]
   },
   "dependencies": {
+    "@redwoodjs/auth": "0.39.4",
     "@redwoodjs/forms": "^0.39.4",
     "@redwoodjs/router": "^0.39.4",
     "@redwoodjs/web": "^0.39.4",
+    "crypto-js": "^4.1.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
