--- a/web/package.json
+++ b/web/package.json
@@ -13,10 +13,10 @@
     ]
   },
   "dependencies": {
-    "@redwoodjs/auth": "0.39.4",
-    "@redwoodjs/forms": "^0.39.4",
-    "@redwoodjs/router": "^0.39.4",
-    "@redwoodjs/web": "^0.39.4",
+    "@redwoodjs/auth": "^0.49.1",
+    "@redwoodjs/forms": "^0.49.1",
+    "@redwoodjs/router": "^0.49.1",
+    "@redwoodjs/web": "^0.49.1",
     "crypto-js": "^4.1.1",
     "prop-types": "15.7.2",
     "react": "17.0.2",
